src/objects/s4g_currencies__CDE_Error__c.object
<CustomObject>
    <fields>
        <fullName>s4g_currencies__Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Exchange_Date__c</fullName>
        <label>Exchange Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Object_Name__c</fullName>
        <inlineHelpText>Api name of the Object</inlineHelpText>
        <label>Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dated Exchange Log</label>
    <listViews>
        <fullName>s4g_currencies__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CDEE-{00000000}</displayFormat>
        <label>CDE Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dated Exchange Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>